--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -2,13 +2,28 @@
 <div class="navbar bg-base-100">
     <div class="flex-1">
         <a class="btn btn-ghost text-xl" href="{{ path('homepage') }}">
-            <i class="far fa-clock"></i>  Fatidique
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+            </svg>
+            Fatidique
         </a>
     </div>
     <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
-            <li><a href="{{ path('homepage') }}" class="mr-2 {{ currentRoute == 'homepage' ? 'active' : '' }}">Home</a></li>
-            <li><a href="{{ path('event_create') }}" class="{{ currentRoute == 'event_create' ? 'active' : '' }}"><i class="fa fa-plus"></i> Créer</a></li>
+            <li><a href="{{ path('homepage') }}" class="mr-2 {{ currentRoute == 'homepage' ? 'active' : '' }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
+                    </svg>
+
+                    Home
+                </a></li>
+            <li>
+                <a href="{{ path('event_create') }}" class="{{ currentRoute == 'event_create' ? 'active' : '' }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+                    </svg>
+                    Créer
+                </a></li>
         </ul>
     </div>
 </div>
