--- a/templates/event/create.html.twig
+++ b/templates/event/create.html.twig
@@ -6,7 +6,9 @@
 {% block body %}
     <figure class="max-w-screen-md mx-auto text-center">
 
-        <i class="fa-solid fa-quote-right fa-2xl mx-auto mb-5 text-gray-400 dark:text-gray-600"></i>
+        <svg class="w-10 h-10 mx-auto mb-3 text-gray-400 dark:text-gray-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 14">
+            <path d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z"/>
+        </svg>
         <blockquote>
             <p class="text-2xl italic font-medium text-gray-900 dark:text-white">"La distance Grappille le temps."</p>
         </blockquote>
@@ -64,7 +66,11 @@
                 </label>
             </div>
 
-            <button type="submit" class="btn btn-primary float-end"><i class="fas fa-paper-plane"></i> Enregistrer
+            <button type="submit" class="btn btn-primary float-end">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 12 3.269 3.125A59.769 59.769 0 0 1 21.485 12 59.768 59.768 0 0 1 3.27 20.875L5.999 12Zm0 0h7.5" />
+                </svg>
+                Enregistrer
             </button>
             {{ form_end(form) }}
 
