chore: use webp for bgimage

--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="grid md:grid-cols-4 sm:grid-cols-1 mt-20">
-        <div class="hero min-h-300 md:col-start-2 md:col-span-2" style="background-image: url({{ asset('assets/images/bg-quote.jpg') }});">
+        <div class="hero min-h-300 md:col-start-2 md:col-span-2" style="background-image: url({{ asset('assets/images/bg-quote.webp') }});">
             <div class="hero-overlay bg-opacity-60"></div>
             <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
